--- a/.luarc.json
+++ b/.luarc.json
@@ -1,12 +1,7 @@
 {
   "runtime.version": "LuaJIT",
-  "runtime.path": [
-    "lua/?.lua",
-    "lua/?/init.lua"
-  ],
+  "runtime.path": ["lua/?.lua", "lua/?/init.lua"],
   "diagnostics.globals": ["vim"],
   "workspace.checkThirdParty": false,
-  "workspace.library": [
-    "$VIMRUNTIME"
-  ]
+  "workspace.library": ["$VIMRUNTIME"]
 }
