feat: git signs plugin

--- a/config/goneovim/settings.toml
+++ b/config/goneovim/settings.toml
@@ -2,7 +2,9 @@
 [Editor]
 RestoreWindowGeometry = true
 StartMaximizedWindow = true
-FontSize = 16
-
-[SideBar]
-Visible = true
+FontSize = 14
+SmoothScroll = true
+[Cursor]
+SmoothMove = true
+[MiniMap]
+visible = true
